Tweak styles on search titles and fix potential layout issues

--- a/public/styles.less
+++ b/public/styles.less
@@ -352,6 +352,14 @@ header {
     padding-bottom: 3px;
     border-bottom: @standardBorder;
 
+    .name {
+      width: 750px;
+      overflow: hidden;
+      white-space: nowrap;
+      font-size: 16px;
+      font-weight: normal;
+    }
+
     .dragHandle {
       position: absolute;
       right: 0;
